Improved the Bernstein copula doc

--- a/python/src/BernsteinCopulaFactory_doc.i.in
+++ b/python/src/BernsteinCopulaFactory_doc.i.in
@@ -3,7 +3,21 @@
 
 Notes
 -----
-This class builds an :class:`~openturns.EmpiricalBernsteinCopula`, which is a copula under some conditions.
+This class builds an :class:`~openturns.EmpiricalBernsteinCopula` which is a non parametric fitting of
+the copula of a multivariate distribution.
+
+The keys of :class:`~openturns.ResourceMap` related to the class are:
+
+- the key `BernsteinCopulaFactory-MinM` and `BernsteinCopulaFactory-MaxM` that define the default range of :math:`m` in the optimization
+  problems computing the optimal bin number according to a specified criteria,
+- the key `BernsteinCopulaFactory-BinNumberSelection` that defines the default criteria to compute the optimal bin number when it is not
+  specified,
+- the key `BernsteinCopulaFactory-KFraction` that specifies the fraction of the sample used for the validation in the
+  method :meth:`ComputeLogLikelihoodBinNumber`,
+- the key `BernsteinCopulaFactory-SamplingSize`  that defines the :math:`N` parameter used in the
+  method :meth:`ComputePenalizedCsiszarDivergenceBinNumber`.
+
+
 
 See also
 --------
@@ -20,38 +34,43 @@ DistributionFactory, EmpiricalBernsteinCopula"
 
     build(*sample*)
 
-    build(*sample, method, objective*)
-
     build(*sample, m*)
+
+    build(*sample, method, f*)
 
 Parameters
 ----------
 sample : 2-d sequence of float, of dimension :math:`d`
     The sample of size :math:`\sampleSize>0` from which the copula is estimated.
 method : str
-    The name of the bin number selection method. Possible choices are *AMISE*, *LogLikelihood* and *PenalizedCsiszarDivergence*. Default is *LogLikelihood*, given by the *'BernsteinCopulaFactory-BinNumberSelection'* entry of :class:`~openturns.ResourceMap`.
-m : int
-    The number of sub-intervals in which all the edges of the unit cube
+    The name of the bin number selection method. Possible choices are *AMISE*, *LogLikelihood* and *PenalizedCsiszarDivergence*.
+    
+    Default is *LogLikelihood*.
+f : :class:`~openturns.Function`
+    The function defining the Csiszar divergence of interest used by
+    the  *PenalizedCsiszarDivergence* method.
+    
+    Default is Function().
+m : int,:math:`1 \leq m \leq \sampleSize`,
+    The bin number, i.e. the number of sub-intervals in which all the edges of the unit cube
     :math:`[0, 1]^d` are regularly partitioned.
     
-    Default value is 1.
+    Default value is the value computed from the default bin number selection method.
 
 Returns
 -------
-core : :class:`~openturns.Distribution`
+copula : :class:`~openturns.Distribution`
     The empirical Bernstein copula as a generic distribution.
 
 Notes
 -----
-Let :math:`\sampleSize` be the size of the sample. If :math:`m` divides :math:`\sampleSize`, then the
-:class:`~openturns.EmpiricalBernsteinCopula` built from the sample is a 
-copula. Otherwise, the :class:`~openturns.EmpiricalBernsteinCopula` built from the sample is a core, i.e a
-multivariate distribution whose range is included in :math:`[0,1]^d`.
+If the bin number :math:`m` is specified and does not divide the sample size :math:`\sampleSize`, then a part of the sample is
+removed for the result to be a copula. See :class:`~openturns.EmpiricalBernsteinCopula`.
 "
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::BernsteinCopulaFactory::buildAsEmpiricalBernsteinCopula
-"Build the empirical Bernstein copula as native distribution.
+"Build the empirical Bernstein copula as a native distribution.
 
 **Available usages**:
 
@@ -59,35 +78,40 @@ multivariate distribution whose range is included in :math:`[0,1]^d`.
 
     buildAsEmpiricalBernsteinCopula(*sample*)
 
-    buildAsEmpiricalBernsteinCopula(*sample, method, objective*)
-
     buildAsEmpiricalBernsteinCopula(*sample, m*)
 
+    buildAsEmpiricalBernsteinCopula(*sample, method, f*)
+
 Parameters
+    The fraction of the sample used for the validation. ComputeLogLikelihoodBinNumber
 ----------
 sample : 2-d sequence of float, of dimension *d*
     The sample of size :math:`\sampleSize>0` from which the copula is estimated.
 method : str
     The name of the bin number selection method. Possible choices are *AMISE*, *LogLikelihood* and
-    *PenalizedCsiszarDivergence*. Default is *LogLikelihood*, given by the *'BernsteinCopulaFactory-BinNumberSelection'*
-    entry of :class:`~openturns.ResourceMap`.
-m : int
-    The number of sub-intervals in which all the edges of the unit cube
+    *PenalizedCsiszarDivergence*.
+    
+    Default is *LogLikelihood*.
+f : :class:`~openturns.Function`
+    The function defining the Csiszar divergence of interest used by
+    the  *PenalizedCsiszarDivergence* method.
+    
+    Default is Function().
+m : int, :math:`1 \leq m \leq \sampleSize`,
+    The bin number, i.e. the number of sub-intervals in which all the edges of the unit cube
     :math:`[0, 1]^d` are regularly partitioned.
     
-    Default value is 1.
+    Default value is the value computed from the default bin number selection method.
 
 Returns
 -------
-core : :class:`~openturns.EmpiricalBernsteinCopula`
-    The empirical Bernstein copula as a :class:`~openturns.EmpiricalBernsteinCopula`.
+copula : :class:`~openturns.EmpiricalBernsteinCopula`
+    The empirical Bernstein copula as a native distribution.
 
 Notes
 -----
-Let :math:`\sampleSize` be the size of the sample. If :math:`m` divides :math:`\sampleSize`, then the
-:class:`~openturns.EmpiricalBernsteinCopula` built from the sample is a 
-copula. Otherwise, the :class:`~openturns.EmpiricalBernsteinCopula` built from the sample is a core, i.e a
-multivariate distribution whose range is included in :math:`[0,1]^d`.
+If the bin number :math:`m` is specified and does not divide the sample size :math:`\sampleSize`, then a part of the sample is
+removed for the result to be a copula a copula. See :class:`~openturns.EmpiricalBernsteinCopula`.
 "
 // ---------------------------------------------------------------------
 
@@ -111,8 +135,6 @@ leading to:
 where :math:`\lfloor x \rfloor` is the largest integer less than or equal to :math:`x`, :math:`\sampleSize` the sample size and :math:`d` the sample dimension.
 
 Note that this optimal :math:`m` does not necessarily divide the sample size :math:`\sampleSize`.
-Then, the :class:`~openturns.EmpiricalBernsteinCopula` built from the sample is no longer a copula but still a
-valid core, i.e a multivariate distribution whose range is included in :math:`[0,1]^d`.
 "
 
 // ---------------------------------------------------------------------
@@ -126,6 +148,8 @@ sample : 2-d sequence of float, of dimension 1
     The sample of size :math:`\sampleSize` from which the optimal log-likelihood bin number is computed.
 kFraction : int, :math:`0<kFraction<\sampleSize`
     The fraction of the sample used for the validation.
+    
+    Default value 2.
 
 Notes
 -----
@@ -147,8 +171,6 @@ where :math:`\cE^V_k=\left\{\vect{x}_i\in\cE\,|\,i\equiv k \mod kFraction\right\
 and :math:`\cE^L_k=\cE \backslash \cE^V_k`.
 
 Note that this optimal :math:`m` does not necessarily divide the sample size :math:`\sampleSize`.
-Then, the :class:`~openturns.EmpiricalBernsteinCopula` built from the sample is no longer a copula but still a
-valid core, i.e a multivariate distribution whose range is included in :math:`[0,1]^d`.
 "
 
 // ---------------------------------------------------------------------
@@ -173,12 +195,13 @@ Let :math:`\cE=(\inputReal_1, \dots, \inputReal_\sampleSize)` be the given sampl
 
     m = \argmin_{M\in\{1,\dots,\sampleSize\}}\left[\hat{D}_f(c^{\cE}_{M})-\dfrac{1}{\sampleSize}\sum_{\vect{x}_i\in\cE}f\left(\dfrac{1}{c^{\cE}_{M}(\vect{x}_i)}\right)\right]^2-[\rho_S(c^{\cE}_{M})-\rho_S({\cE}_{M})]^2
 
-where :math:`c_M^{\cE}` is the density function of the :class:`~openturns.EmpiricalBernsteinCopula` associated to the sample :math:`\cE` and the bin number :math:`M`, :math:`\hat{D}_f(c^{\cE}_{M})=\dfrac{1}{N}\sum_{j=1}^Nf\left(\dfrac{1}{\vect{u}_j}\right)` a Monte Carlo estimate of the Csiszar :math:`f` divergence, :math:`\rho_S(c^{\cE}_{M})` the exact Spearman correlation of the empirical Bernstein copula :math:`c^{\cE}_{M}` and :math:`\rho_S({\cE}_{M})` the empirical Spearman correlation of the sample :math:`{\cE}_{M}`.
+where :math:`c_M^{\cE}` is the density function of the :class:`~openturns.EmpiricalBernsteinCopula` associated to the sample
+:math:`\cE` and the bin number :math:`M`, :math:`\hat{D}_f(c^{\cE}_{M})=\dfrac{1}{N}\sum_{j=1}^Nf\left(\dfrac{1}{\vect{u}_j}\right)` a
+Monte Carlo estimate of the Csiszar :math:`f` divergence, :math:`\rho_S(c^{\cE}_{M})` the exact Spearman correlation of the empirical
+Bernstein copula :math:`c^{\cE}_{M}` and :math:`\rho_S({\cE}_{M})` the empirical Spearman correlation of the sample :math:`{\cE}_{M}`.
 
 The parameter :math:`N` is controlled by the *BernsteinCopulaFactory-SamplingSize* key in :class:`~openturns.ResourceMap`.
 
 Note that this optimal :math:`m` does not necessarily divide the sample size :math:`\sampleSize`.
-Then, the :class:`~openturns.EmpiricalBernsteinCopula` built from the sample is no longer a copula but still a
-valid core, i.e a multivariate distribution whose range is included in :math:`[0,1]^d`.
 "
 
