--- a/python/src/EmpiricalBernsteinCopula_doc.i.in
+++ b/python/src/EmpiricalBernsteinCopula_doc.i.in
@@ -7,7 +7,7 @@ sample : :class:`~openturns.Sample`
     A sample of size :math:`\sampleSize>0` and dimension :math:`d`.
     
     Default value is [[0.0], [0.0]].
-m : int, :math:`0 < m \leq \sampleSize`
+m : int, :math:`1 \leq m \leq \sampleSize`
     The number of sub-intervals in which all the edges of the unit cube
     :math:`[0, 1]^d` are regularly partitioned.
     
@@ -20,13 +20,16 @@ isRankSample : bool
 Notes
 -----
 Let :math:`(\inputReal_1, \dots, \inputReal_\sampleSize)` a sample. Let :math:`m` be the bin number.
+Note that when :math:`m=1`, the empirical Bernstein copula is the independent copula. When :math:`m=\sampleSize`, the empirical Bernstein
+copula is also called *the beta copula* (see [segers2016]_).
 
-Case 1: :math:`isRankSample = False`.
+**Case 1:** :math:`isRankSample = False`.
 
-In that case, if :math:`m|\sampleSize` is not verified, then a part of the sample is
-removed in order to get a new size :math:`\tilde{\sampleSize}` such that :math:`m|\tilde{\sampleSize}`. At most, :math:`m-1` points are removed from the initial sample. This condition guarantees that the Bernstein interpolant based on the empirical copula is a copula.
+In that case, if :math:`m` does not divide :math:`\sampleSize`, then a part of the sample is
+removed in order to get a new size :math:`\tilde{\sampleSize}` such that :math:`m` divides :math:`\tilde{\sampleSize}`. At most, :math:`m-1` points are removed from the initial sample. This condition guarantees that the :class:`~openturns.EmpiricalBernsteinCopula`
+built is a copula.
 
-We still denote by  :math:`\sampleSize` the size of the sample used to create the empirical Bernstein interpolant copula.
+We still denote by  :math:`\sampleSize` the size of the sample used to create the empirical Bernstein copula.
 
 Let :math:`(\vect{v}_1, \dots, \vect{v}_\sampleSize)` be the associated normalized rank sample defined  by:
 
@@ -34,7 +37,7 @@ Let :math:`(\vect{v}_1, \dots, \vect{v}_\sampleSize)` be the associated normaliz
 
      \vect{v}_k = \dfrac{1}{\sampleSize} rank(\inputReal_k)
 
-for all :math:`1 \leq i \leq \sampleSize` where the rank of a vector is the vector of the rank of the components.
+for all :math:`1 \leq i \leq \sampleSize` where the rank of a vector is the vector of the component ranks.
 
 Let :math:`r_i^j` and :math:`s_i^j` defined by:
 
@@ -50,7 +53,7 @@ Let :math:`B(r_i^j , s_i^j, 0, 1)` be a
 :class:`~openturns.Beta` distribution defined on :math:`[0,1]` parametrized by the shape parameters :math:`r_i^j` and
 :math:`s_i^j`. We denote by :math:`F_{B(r_i^j, s_i^j, 0, 1)}` its cumulated distribution function.
 
-Then the empirical Bernstein copula is defined by:
+Then the empirical Bernstein copula :math:`C^B_\sampleSize` is defined by:
 
 .. math::
     :label: defEmpCopBernstein
@@ -59,7 +62,7 @@ Then the empirical Bernstein copula is defined by:
 
 for :math:`\vect{u}\in[0,1]^d`.
 
-Case 2: :math:`isRankSample = True`.
+**Case 2:** :math:`isRankSample = True`.
 
 In that case, the given sample is assumed to be already a normalized rank sample.
 Even if the bin number :math:`m` does not divide :math:`\sampleSize`, the whole sample is used. The
@@ -71,8 +74,11 @@ and :math:`s_i^j` are computed on the initial sample :math:`(\inputReal_1, \dots
      r_i^j & = \lfloor m x_i^j \rfloor \\
      s_i^j & = m-r_i^j+1
 
-If the condition :math:`m|N` is not verified, then :math:`C^B_\sampleSize` is no longer a copula but still a valid core,
-i.e a multivariate distribution whose range is included in :math:`[0,1]^d`.
+If :math:`m` does not divide :math:`\sampleSize`, then :math:`C^B_\sampleSize` is no longer a copula but still a valid core,
+i.e a multivariate distribution whose range is included in :math:`[0,1]^d`. As a matter of fact, the marginals are not necessarily
+uniform because some cells may have more points than others.
+
+We still use the term *copula* even if it is not a copula.
 
 See also
 --------
@@ -83,7 +89,9 @@ Examples
 Create a distribution:
 
 >>> import openturns as ot
->>> empBernsteinCop = ot.EmpiricalBernsteinCopula(ot.Normal(2).getSample(10), 2, False)
+>>> sampleNormal = ot.Normal(2).getSample(10)
+>>> m = 2
+>>> empBernsteinCop = ot.EmpiricalBernsteinCopula(sampleNormal, m)
 
 Draw a sample:
 
