--- a/python/src/DirectionalSampling_doc.i.in
+++ b/python/src/DirectionalSampling_doc.i.in
@@ -1,5 +1,5 @@
 %feature("docstring") OT::DirectionalSampling
-"Directional simulation.
+"Directional sampling algorithm.
 
 Refer to :ref:`directional_simulation`.
 
@@ -13,61 +13,57 @@ Parameters
 event : :class:`~openturns.RandomVector`
     Event we are computing the probability of.
 rootStrategy : :class:`~openturns.RootStrategy`
-    Strategy adopted to evaluate the intersections of each direction with the
-    limit state function and take into account the contribution of the
-    direction to the event probability. By default,
-    *rootStrategy = ot.RootStrategy(ot.SafeAndSlow())*.
+    Strategy used to evaluate the frontiers of
+    the event along each direction in the standard space.
+
+    By default,:class:`~openturns.SafeAndSlow`.
 samplingStrategy : :class:`~openturns.SamplingStrategy`
-    Strategy adopted to sample directions. By default,
-    *samplingStrategy=ot.SamplingStrategy(ot.RandomDirection())*.
+    Strategy used to sample directions in the standard space.
+
+    By default, :class:`~openturns.RandomDirection`.
 
 Notes
 -----
-Using the probability distribution of a random vector :math:`\vect{X}`, we seek
-to evaluate the following probability:
+Let :math:`\inputRV` ba a random vector of dimension :math:`\inputDim`, distributed according to
+the measure :math:`\inputMeasure`, and :math:`\model: \Rset^\inputDim \rightarrow \Rset`
+be the *limit state function* (where we only wrote the random input parameters). We define the event
+:math:`\cD_f` by:
 
 .. math::
 
-    P_f = \int_{\Rset^{n_X}} \mathbf{1}_{\{g(\ux,\underline{d}) \leq 0 \}}f_{\uX}(\ux)\di{\ux}
-        = \Prob{g\left( \vect{X},\vect{d} \right) \leq 0}
+    \cD_f = \{\inputRV \in \Rset^{\inputDim} \, | \,\model(\vect{x}) \leq 0\}
 
-Here, :math:`\vect{X}` is a random vector, :math:`\vect{d}` a deterministic
-vector, :math:`g(\vect{X},\vect{d})` the function known as *limit state function*
-which enables the definition of the event
-:math:`\cD_f = \{\vect{X} \in \Rset^n \, | \, g(\vect{X},\vect{d}) \le 0\}`.
-:math:`\mathbf{1}_{ \left\{ g(\vect{x}_i,\vect{d}) \leq 0 \right\} }`
-describes the indicator function equal to 1 if
-:math:`g(\vect{x}_i,\vect{d}) \leq 0` and equal to 0 otherwise.
+The directional sampling algorithm estimates the probability of the event :math:`\cD_f`:
 
-The directional simulation method is an accelerated sampling method. It implies
-a preliminary iso-probabilistic transformation, as for :class:`~openturns.FORM`
-and :class:`~openturns.SORM` methods; however, it remains based on sampling and
+.. math::
+
+    P_f = \Prob{\model\left( \inputRV \right) \leq 0}
+        = \int_{\Rset^{\inputDim}} \mathbf{1}_{\{\model(\vect{x}) \leq 0 \}}\inputMeasure(\vect{x})\di{\vect{x}}
+
+
+The directional sampling algorithm is an accelerated sampling method. As it is performed
+in the standard space, it uses an iso-probabilistic transformation, as for :class:`~openturns.FORM`
+and :class:`~openturns.SORM` methods. However, it remains based on sampling and
 is thus not an approximation method.
-In the transformed space, the (transformed) uncertain variables :math:`\vect{U}`
-are independent standard gaussian variables (mean equal to zero and standard
-deviation equal to 1).
 
-Roughly speaking, each simulation of the directional simulation algorithm is
-made of three steps. For the :math:`i^\textrm{th}` iteration, these steps are
-the following:
+In the standard space, the random variates are independent and follow normal distributions with zero
+mean and unit variance. Each iteration of the directional sampling algorithm follows the steps:
 
-- Let :math:`\cS = \big\{ \vect{u} \big| ||\vect{u}|| = 1 \big\}`. A point
-  :math:`P_i` is drawn randomly on :math:`\cS` according to an uniform
-  distribution.
+- According to the specified :class:`~openturns.SamplingStrategy`, one or several directions
+  are generated in the standard space. Each direction is computed from a point drawn randomly
+  on :math:`\cS = \big\{ \vect{u} \big| ||\vect{u}|| = 1 \big\}` according to the uniform
+  distribution on :math:`\cS`.
 
-- In the direction starting from the origin and passing through :math:`P_i`,
-  solutions of the equation :math:`g(\vect{X},\vect{d}) = 0` (i.e. limits of
-  :math:`\cD_f`) are searched. The set of values of :math:`\vect{u}` that
-  belong to :math:`\cD_f` is deduced for these solutions: it is a subset
-  :math:`I_i \subset \Rset`.
+- Along each generated direction :math:`i`, we find the frontiers of :math:`\cD_f`, i.e. the solutions
+  of :math:`g(\vect{x}) = 0` from which we deduce the subset
+  :math:`I_i \subset \Rset` that belongs to :math:`\cD_f`.
 
-- Then, one calculates the probability :math:`q_i = \Prob{ ||\vect{U}|| \in I_i }`.
-  By property of independent standard variable, :math:`||\vect{U}||^2` is a
-  random variable distributed according to a chi-square distribution, which
-  makes the computation effortless.
+- For each subset :math:`I_i`, we compute the probability
+  :math:`q_i = \Prob{ ||\RVU|| \in I_i }`. As :math:`\RVU` follows a standard normal gaussian vector
+  with independent components, :math:`||\RVU||` follows a :math:`\chi` distribution which degree of
+  freedom is equal to :math:`\inputDim`.
 
-Finally, the estimate of the probability :math:`P_f` after :math:`N` simulations
-is the following:
+The probability :math:`P_f` is computed from all the  :math:`q_i` probabilities. If :math:`N` directions have been used, then:
 
 .. math::
 
@@ -77,20 +73,25 @@ Examples
 --------
 >>> import openturns as ot
 >>> ot.RandomGenerator.SetSeed(0)
+
+Create the output random vector :math:`Y = \model(\inputRV)`:
 >>> myFunction = ot.SymbolicFunction(['E', 'F', 'L', 'I'], ['-F*L^3/(3*E*I)'])
 >>> myDistribution = ot.Normal([50.0, 1.0, 10.0, 5.0], [1.0]*4, ot.IdentityMatrix(4))
->>> # We create a 'usual' RandomVector from the Distribution
->>> vect = ot.RandomVector(myDistribution)
->>> # We create a composite random vector
->>> output = ot.CompositeRandomVector(myFunction, vect)
->>> # We create an Event from this RandomVector
->>> myEvent = ot.ThresholdEvent(output, ot.Less(), -3.0)
->>> # We create a DirectionalSampling algorithm
+>>> input_RV = RandomVector(myDistribution)
+>>> output_RV = ot.CompositeRandomVector(myFunction, input_RV)
+
+Create the event :math:`\cD_f = \{\inputRV \in \Rset^{\inputDim} \, | \,\model(\vect{x}) \leq -3.0\}`:
+>>> threshold = -3.0
+>>> myEvent = ot.ThresholdEvent(output_RV, ot.Less(), -3.0)
+
+Create the directional sampling algorithm and the convergence criterias: 
 >>> myAlgo = ot.DirectionalSampling(myEvent, ot.MediumSafe(), ot.OrthogonalDirection())
 >>> myAlgo.setMaximumOuterSampling(150)
 >>> myAlgo.setBlockSize(4)
 >>> myAlgo.setMaximumCoefficientOfVariation(0.1)
 >>> # Perform the simulation
+
+Run the algorithm and extract the estimated probabilty:
 >>> myAlgo.run()
 >>> print('Probability estimate=%.6f' % myAlgo.getResult().getProbabilityEstimate())
 Probability estimate=0.169716"
@@ -103,7 +104,8 @@ Probability estimate=0.169716"
 Returns
 -------
 strategy : :class:`~openturns.RootStrategy`
-    Root strategy adopted."
+    Root strategy used to evaluate the frontiers of
+    the event along each direction in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -113,7 +115,8 @@ strategy : :class:`~openturns.RootStrategy`
 Parameters
 ----------
 strategy : :class:`~openturns.RootStrategy`
-    Root strategy adopted."
+    Root strategy to evaluate the frontiers of
+    the event along each direction in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -123,7 +126,8 @@ strategy : :class:`~openturns.RootStrategy`
 Returns
 -------
 strategy : :class:`~openturns.SamplingStrategy`
-    Direction sampling strategy adopted."
+    Direction sampling strategy used to sample
+    directions in the standard space."
 
 // ---------------------------------------------------------------------
 
@@ -133,4 +137,5 @@ strategy : :class:`~openturns.SamplingStrategy`
 Parameters
 ----------
 strategy : :class:`~openturns.SamplingStrategy`
-    Direction sampling strategy adopted."
+    Direction sampling strategy used
+    to sample directions in the standard space."
